--- a/package.json
+++ b/package.json
@@ -6,19 +6,31 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-less": "^3.0.17",
+    "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-typography": "^2.3.20",
+    "gatsby-source-contentful": "^2.1.73",
+    "gatsby-source-filesystem": "^2.1.43",
+    "less": "^3.10.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-typography": "^0.16.19",
+    "styled-components": "^4.4.1",
+    "typography": "^0.16.19",
+    "typography-theme-noriega": "^0.16.19"
   },
   "devDependencies": {
+    "env-cmd": "^10.0.1",
     "prettier": "^1.19.1"
   },
   "repository": {
