--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.12",
     "gatsby-plugin-less": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
@@ -31,14 +30,13 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
-    "styled-components": "^4.4.1",
-    "styled-reset": "^4.0.8",
     "typography": "^0.16.19",
     "typography-theme-noriega": "^0.16.19"
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "smart-grid": "^2.1.2"
   },
   "repository": {
     "type": "git",
