--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "portfolio-gatsby",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "My portfolio",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -22,8 +22,8 @@
     "gatsby": "^2.18.12",
     "gatsby-plugin-less": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-plugin-typography": "^2.3.20",
+    "gatsby-plugin-styled-components": "^3.1.17",
+    "gatsby-plugin-typography": "^2.3.21",
     "gatsby-source-contentful": "^2.1.73",
     "gatsby-source-filesystem": "^2.1.43",
     "less": "^3.10.3",
