--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "portfolio-gatsby",
   "private": true,
   "description": "My portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "env-cmd -f .env gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -24,6 +24,7 @@
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-typography": "^2.3.21",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-contentful": "^2.1.73",
     "gatsby-source-filesystem": "^2.1.43",
     "less": "^3.10.3",
